--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,6 @@
   flex-direction: column;
   
   align-items: center;
-  box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.2);
   object-fit: contain;
 }
 
@@ -51,20 +50,26 @@ body {
     background:rgba(150, 100, 100, 0.699);
     padding: 1vw;
   }
+  #freeTextBox{
+    width: 90vw;
+    margin-inline: 5vw;
+    border: 0.65vw inset maroon;
+    background:rgb(233, 189, 189);
+  }
   #titleBox{
-    background:rgba(150, 100, 100, 0.699);
+    background:rgb(233, 189, 189);
     width: 33vw;
     margin-left: 33vw;
-    
   }
   #box{
-    background:rgba(150, 100, 100, 0.699);
+    background:rgb(233, 189, 189);
     width: 33vw;
-
+    margin-left: 33vw;
+    margin-top: 20vh;
   }
   #ContainerTitleBox{
     margin-left: 23vw;
-    background:rgba(150, 100, 100, 0.699);
+    background:rgba(230, 125, 125, 0.479);
     width: 33vw;
   }
   #lucir
@@ -95,16 +100,14 @@ body {
   font-size: 20vh;
 }
 #thanksmessage{
-    text-indent:92px;
-    margin-inline: 90px;
-    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 19px;
-    text-align:center;
-    color:rgb(122, 122, 131);
+  text-indent: 10vw;
+  font-family: Jenriv;
+  font-size: 2vh;
+  margin-inline: 11vw;
+  color:mintcream;
   }
 #companyphoto{
-    
-    height: 60vh;
+    height: 36vw;
     margin-left: auto;
     margin-right: auto;
     display: inline;
@@ -130,7 +133,7 @@ body {
     width: 13vw;
     display: inline;
     margin-bottom: 6vh;
-    margin-right: 5vw;
+    margin-right: 2vw;
   }
   #palm2{
     width: 13vw;
@@ -138,7 +141,7 @@ body {
     margin-bottom: 6vh;
 
     transform: scaleX(-1);
-    margin-left: 5vw;
+    margin-left: 2vw;
 
   }
   #contact{
